infra/k8s/tickets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets # tells the deployment how to find all the pods its going to create
  template:
    metadata:
      labels:
        app: tickets # how the deployment should create each individual pod
    spec:
      containers:
        - name: tickets
          image: ccrane91/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-service
spec:
  selector:
    app: tickets # tells the service how to find the pods it needs to manage
  ports:
    - name: tickets
      protocol: TCP
      port: 3001
      targetPort: 3001
