infra/k8s/ingress-service.yaml
# configures the nginx ingress controller to route requests to the correct service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-service
                port:
                  number: 3000
